--- a/css/mobile.css
+++ b/css/mobile.css
@@ -277,7 +277,7 @@ height: 12em;
     margin-bottom: 2em;
 }
 
-.sidebar li {
+#sidebar-left.sidebar li {
     list-style: none;
     height: 2.2em;
     line-height: 2.2em;
@@ -312,6 +312,7 @@ height: 12em;
     position: relative;
     width: 100%;
     margin-top: 0.2em;
+    color: #666;
 }
 
 .sidebar-inner h4 {
@@ -374,7 +375,8 @@ height: 12em;
     transform: translate(-100%,0);
 }
 
-#nav-close {
+#nav-close,
+#chat-close {
     position: absolute;
     right: 0.5em;
     top: 0.2em;
@@ -430,9 +432,6 @@ height: 12em;
     font-size: 1.5em;
 }
 
-#sidebar-right .sidebar-inner {
-    padding:1em;
-}
 .sidebar {
     transition: all 0.2s cubic-bezier(.69,1,.88,1);
     top:0;
@@ -1078,41 +1077,101 @@ position: fixed;
 }
 
 #chat-stream {
-    background: #666 url(/img/sidebar-bkg.png);
-    width: 96%;
+    width: 100%;
     height: 30em;
-    padding: 0.1em;
-    margin: 0.1em 0 1em 0;
-    overflow: scroll;
+    overflow: auto;
 }
 
 #chat-stream ul {
     border: none;
+    margin: 0;
+    padding: 0;
 }
 #chat-stream li {
     background: none;
-    font-size: 1.3em;
+    font-size: 1.1em;
     line-height: 1.3em;
     text-shadow: none;
-    margin: 0;
+    margin: 0 0 0.6em 0;
     border: none;
-    padding: 0.1em 0.5em;
     height: auto;
+    font-weight: 400;
 }
 
-#chat-stream li strong {
-    font-size: 1em;
-    font-weight: bold;
-    padding: 0;
-    margin: 0;
+#chat-stream li span {
+    color: #333;
 }
 
-#chat-input i {
-    text-shadow: none;
+#chat-stream li.own {
+    padding-left: 2em;
+}
+
+#chat-stream li.other {
+    padding-right: 2em;
+}
+
+#chat-stream li.other span {
+    display: block;
+    text-align: right;
+}
+
+#chat-stream li.admin {
+    padding-right: 2em;
+}
+
+#chat-stream li.admin span {
+    display: block;
+    text-align: right;
+}
+
+#chat-stream li.own div {
+    background: #bababa;
+    color: #fff;
+    font-size: 1.1em;
+    padding: 0.5em;
+}
+
+#chat-stream li.other div {
+    background: #30b4a0;
+    color: #fff;
+    font-size: 1.1em;
+    padding: 0.5em;
+}
+
+#chat-stream li.admin div {
+    background: #2ea6dd;
+    color: #fff;
+    font-size: 1.1em;
+    padding: 0.5em;
 }
 
 #chat-text {
     outline: none;
+    margin: 10px;
+    width:400px;
+    font-size:2em;
+    padding:0.1em 10px;
+    border: #616161 1px solid;
+    margin-top: 0.25em;
+    border-radius: none !important;
+}
+
+#chat-enter {
+    border: none;
+    font-size: 2em;
+    background: #efefef;
+    margin: 0;
+    padding: 0 10px 0 0;
+}
+
+#chat-form {
+    background: #efefef;
+    height: 4em;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 0;
 }
 
 
